Fix damage description on mobile

--- a/src/app/target-pokemon/target-pokemon.component.scss
+++ b/src/app/target-pokemon/target-pokemon.component.scss
@@ -100,4 +100,8 @@
     margin: 1em 0 1em 0;
   }
 
+  .damage-description {
+    margin-top: 1em;
+  }
+
 }
